// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingStar component render correctly Disabled, max 5 1`] = `
<div
  className="rating"
>
  <div
    className="rating__stars"
  >
    <input
      className="rating__input"
      disabled={true}
      id="star-1"
      name="rating"
      onChange={[Function]}
      type="radio"
      value={1}
    />
    <label
      className="rating__label"
      htmlFor="star-1"
    >
      Rating 
      1
    </label>
    <input
      className="rating__input"
      disabled={true}
      id="star-2"
      name="rating"
      onChange={[Function]}
      type="radio"
      value={2}
    />
    <label
      className="rating__label"
      htmlFor="star-2"
    >
      Rating 
      2
    </label>
    <input
      className="rating__input"
      disabled={true}
      id="star-3"
      name="rating"
      onChange={[Function]}
      type="radio"
      value={3}
    />
    <label
      className="rating__label"
      htmlFor="star-3"
    >
      Rating 
      3
    </label>
    <input
      className="rating__input"
      disabled={true}
      id="star-4"
      name="rating"
      onChange={[Function]}
      type="radio"
      value={4}
    />
    <label
      className="rating__label"
      htmlFor="star-4"
    >
      Rating 
      4
    </label>
    <input
      className="rating__input"
      disabled={true}
      id="star-5"
      name="rating"
      onChange={[Function]}
      type="radio"
      value={5}
    />
    <label
      className="rating__label"
      htmlFor="star-5"
    >
      Rating 
      5
    </label>
  </div>
</div>
`;

exports[`RatingStar component render correctly Enabled, max 5 1`] = `
<div
  className="rating"
>
  <div
    className="rating__stars"
  >
    <input
      className="rating__input"
      disabled={false}
      id="star-1"
      name="rating"
      onChange={[Function]}
      type="radio"
      value={1}
    />
    <label
      className="rating__label"
      htmlFor="star-1"
    >
      Rating 
      1
    </label>
    <input
      className="rating__input"
      disabled={false}
      id="star-2"
      name="rating"
      onChange={[Function]}
      type="radio"
      value={2}
    />
    <label
      className="rating__label"
      htmlFor="star-2"
    >
      Rating 
      2
    </label>
    <input
      className="rating__input"
      disabled={false}
      id="star-3"
      name="rating"
      onChange={[Function]}
      type="radio"
      value={3}
    />
    <label
      className="rating__label"
      htmlFor="star-3"
    >
      Rating 
      3
    </label>
    <input
      className="rating__input"
      disabled={false}
      id="star-4"
      name="rating"
      onChange={[Function]}
      type="radio"
      value={4}
    />
    <label
      className="rating__label"
      htmlFor="star-4"
    >
      Rating 
      4
    </label>
    <input
      className="rating__input"
      disabled={false}
      id="star-5"
      name="rating"
      onChange={[Function]}
      type="radio"
      value={5}
    />
    <label
      className="rating__label"
      htmlFor="star-5"
    >
      Rating 
      5
    </label>
  </div>
</div>
`;
